@@ -101,6 +101,26 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Queue
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|LinkedList
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -1090,76 +1110,6 @@ operator|+
 name|path
 argument_list|)
 expr_stmt|;
-comment|// The following code should be removed, once
-comment|// https://issues.apache.org/jira/browse/MAPREDUCE-1597 is fixed.
-comment|// Hadoop does not handle non-splitable files correctly for CombineFileInputFormat,
-comment|// so don't use CombineFileInputFormat for non-splittable files
-name|FileSystem
-name|inpFs
-init|=
-name|path
-operator|.
-name|getFileSystem
-argument_list|(
-name|job
-argument_list|)
-decl_stmt|;
-name|FileStatus
-name|fStats
-init|=
-name|inpFs
-operator|.
-name|getFileStatus
-argument_list|(
-name|path
-argument_list|)
-decl_stmt|;
-name|Path
-name|tstPath
-init|=
-name|path
-decl_stmt|;
-comment|// If path is a directory
-if|if
-condition|(
-name|fStats
-operator|.
-name|isDir
-argument_list|()
-condition|)
-block|{
-name|FileStatus
-index|[]
-name|fStatus
-init|=
-name|inpFs
-operator|.
-name|listStatus
-argument_list|(
-name|path
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|fStatus
-operator|.
-name|length
-operator|>
-literal|0
-condition|)
-block|{
-name|tstPath
-operator|=
-name|fStatus
-index|[
-literal|0
-index|]
-operator|.
-name|getPath
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 name|PartitionDesc
 name|part
 init|=
@@ -1168,25 +1118,6 @@ argument_list|(
 name|pathToPartitionInfo
 argument_list|,
 name|path
-argument_list|)
-decl_stmt|;
-comment|// Use HiveInputFormat if any of the paths is not splittable
-name|Class
-name|inputFormatClass
-init|=
-name|part
-operator|.
-name|getInputFileFormatClass
-argument_list|()
-decl_stmt|;
-name|InputFormat
-name|inputFormat
-init|=
-name|getInputFormatFromCache
-argument_list|(
-name|inputFormatClass
-argument_list|,
-name|job
 argument_list|)
 decl_stmt|;
 name|TableDesc
@@ -1222,15 +1153,107 @@ name|numSplits
 argument_list|)
 return|;
 block|}
+comment|// Use HiveInputFormat if any of the paths is not splittable
+name|Class
+name|inputFormatClass
+init|=
+name|part
+operator|.
+name|getInputFileFormatClass
+argument_list|()
+decl_stmt|;
+name|InputFormat
+name|inputFormat
+init|=
+name|getInputFormatFromCache
+argument_list|(
+name|inputFormatClass
+argument_list|,
+name|job
+argument_list|)
+decl_stmt|;
+comment|// Since there is no easy way of knowing whether MAPREDUCE-1597 is present in the tree or not,
+comment|// we use a configuration variable for the same
 if|if
 condition|(
-operator|(
+name|this
+operator|.
+name|mrwork
+operator|!=
+literal|null
+operator|&&
+name|this
+operator|.
+name|mrwork
+operator|.
+name|getHadoopSupportsSplittable
+argument_list|()
+condition|)
+block|{
+comment|// The following code should be removed, once
+comment|// https://issues.apache.org/jira/browse/MAPREDUCE-1597 is fixed.
+comment|// Hadoop does not handle non-splittable files correctly for CombineFileInputFormat,
+comment|// so don't use CombineFileInputFormat for non-splittable files
+name|FileSystem
+name|inpFs
+init|=
+name|path
+operator|.
+name|getFileSystem
+argument_list|(
+name|job
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
 name|inputFormat
 operator|instanceof
 name|TextInputFormat
-operator|)
-operator|&&
-operator|(
+condition|)
+block|{
+name|Queue
+argument_list|<
+name|Path
+argument_list|>
+name|dirs
+init|=
+operator|new
+name|LinkedList
+argument_list|<
+name|Path
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|FileStatus
+name|fStats
+init|=
+name|inpFs
+operator|.
+name|getFileStatus
+argument_list|(
+name|path
+argument_list|)
+decl_stmt|;
+comment|// If path is a directory
+if|if
+condition|(
+name|fStats
+operator|.
+name|isDir
+argument_list|()
+condition|)
+block|{
+name|dirs
+operator|.
+name|offer
+argument_list|(
+name|path
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
 operator|(
 operator|new
 name|CompressionCodecFactory
@@ -1241,11 +1264,10 @@ operator|)
 operator|.
 name|getCodec
 argument_list|(
-name|tstPath
+name|path
 argument_list|)
 operator|!=
 literal|null
-operator|)
 condition|)
 block|{
 return|return
@@ -1258,6 +1280,117 @@ argument_list|,
 name|numSplits
 argument_list|)
 return|;
+block|}
+while|while
+condition|(
+name|dirs
+operator|.
+name|peek
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|Path
+name|tstPath
+init|=
+name|dirs
+operator|.
+name|remove
+argument_list|()
+decl_stmt|;
+name|FileStatus
+index|[]
+name|fStatus
+init|=
+name|inpFs
+operator|.
+name|listStatus
+argument_list|(
+name|tstPath
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|idx
+init|=
+literal|0
+init|;
+name|idx
+operator|<
+name|fStatus
+operator|.
+name|length
+condition|;
+name|idx
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|fStatus
+index|[
+name|idx
+index|]
+operator|.
+name|isDir
+argument_list|()
+condition|)
+block|{
+name|dirs
+operator|.
+name|offer
+argument_list|(
+name|fStatus
+index|[
+name|idx
+index|]
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+operator|(
+operator|new
+name|CompressionCodecFactory
+argument_list|(
+name|job
+argument_list|)
+operator|)
+operator|.
+name|getCodec
+argument_list|(
+name|fStatus
+index|[
+name|idx
+index|]
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+operator|!=
+literal|null
+condition|)
+block|{
+return|return
+name|super
+operator|.
+name|getSplits
+argument_list|(
+name|job
+argument_list|,
+name|numSplits
+argument_list|)
+return|;
+block|}
+block|}
+block|}
+block|}
 block|}
 if|if
 condition|(
