@@ -246,7 +246,7 @@ specifier|public
 name|GenMRTableScan1
 parameter_list|()
 block|{   }
-comment|/**    * Table Sink encountered.    *     * @param nd    *          the table sink operator encountered    * @param opProcCtx    *          context    */
+comment|/**    * Table Sink encountered.    *    * @param nd    *          the table sink operator encountered    * @param opProcCtx    *          context    */
 specifier|public
 name|Object
 name|process
@@ -328,7 +328,12 @@ argument_list|(
 name|GenMapRedUtils
 operator|.
 name|getMapRedWork
+argument_list|(
+name|parseCtx
+operator|.
+name|getConf
 argument_list|()
+argument_list|)
 argument_list|,
 name|parseCtx
 operator|.
