@@ -3316,12 +3316,6 @@ throws|throws
 name|SemanticException
 block|{
 comment|// Generate a new task
-name|MapredWork
-name|cplan
-init|=
-name|getMapRedWork
-argument_list|()
-decl_stmt|;
 name|ParseContext
 name|parseCtx
 init|=
@@ -3329,6 +3323,17 @@ name|opProcCtx
 operator|.
 name|getParseCtx
 argument_list|()
+decl_stmt|;
+name|MapredWork
+name|cplan
+init|=
+name|getMapRedWork
+argument_list|(
+name|parseCtx
+operator|.
+name|getConf
+argument_list|()
+argument_list|)
 decl_stmt|;
 name|Task
 argument_list|<
@@ -4798,7 +4803,10 @@ specifier|public
 specifier|static
 name|MapredWork
 name|getMapRedWork
-parameter_list|()
+parameter_list|(
+name|HiveConf
+name|conf
+parameter_list|)
 block|{
 name|MapredWork
 name|work
@@ -4874,6 +4882,22 @@ operator|.
 name|setReducer
 argument_list|(
 literal|null
+argument_list|)
+expr_stmt|;
+name|work
+operator|.
+name|setHadoopSupportsSplittable
+argument_list|(
+name|conf
+operator|.
+name|getBoolVar
+argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVE_COMBINE_INPUT_FORMAT_SUPPORTS_SPLITTABLE
+argument_list|)
 argument_list|)
 expr_stmt|;
 return|return
@@ -5831,7 +5855,12 @@ operator|=
 name|GenMapRedUtils
 operator|.
 name|getMapRedWork
+argument_list|(
+name|parseCtx
+operator|.
+name|getConf
 argument_list|()
+argument_list|)
 expr_stmt|;
 name|uTask
 operator|=
