@@ -989,14 +989,6 @@ name|GenMRProcContext
 operator|)
 name|procCtx
 decl_stmt|;
-name|MapredWork
-name|cplan
-init|=
-name|GenMapRedUtils
-operator|.
-name|getMapRedWork
-argument_list|()
-decl_stmt|;
 name|ParseContext
 name|parseCtx
 init|=
@@ -1004,6 +996,19 @@ name|opProcCtx
 operator|.
 name|getParseCtx
 argument_list|()
+decl_stmt|;
+name|MapredWork
+name|cplan
+init|=
+name|GenMapRedUtils
+operator|.
+name|getMapRedWork
+argument_list|(
+name|parseCtx
+operator|.
+name|getConf
+argument_list|()
+argument_list|)
 decl_stmt|;
 name|Task
 argument_list|<
@@ -1452,7 +1457,12 @@ init|=
 name|GenMapRedUtils
 operator|.
 name|getMapRedWork
+argument_list|(
+name|parseCtx
+operator|.
+name|getConf
 argument_list|()
+argument_list|)
 decl_stmt|;
 name|Task
 argument_list|<
